;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.3.4:
  * enhancement: Unicode support has been updated to support version 15.0.0 of
    the Unicode standard, including addition of characters and their collation
    keys, and refinements to grapheme-, word- and line-breaking algorithms.

changes in sbcl-2.3.4 relative to sbcl-2.3.3:
  * enhancement: attempts to call non-callable objects can now provide
    USE-VALUE restarts on x86-64 and arm64.
  * bug fix: ioctl() (both in SBCL's internals and through SB-POSIX) was
    broken on ARM64/Darwin.  (reported by fiddlerwoaroof)
  * platform support:
    ** support for cross-compiling the system to Android has been added;
       (thanks to Gleefre)
    ** include likely absolute paths for gmp and mpfr on ARM64/Darwin; (thanks
       to Elias Lawson-Fox)
    ** include another absolute path for mpfr on Windows; (thanks to Ari
       Projansky)
    ** the PROMISE-COMPILE feature from the SB-CONCURRENCY contrib is now
       available on all threaded platforms;
  * optimization: VALUES-LIST performs less redundant work on x86-64 and
    ARM64.

changes in sbcl-2.3.3 relative to sbcl-2.3.2:
  * enhancement: LET-bound anonymous closures declared dynamic extent can now
    be stack allocated, just like closures bound with FLET or
    LABELS. Otherwise-inaccessible closure subparts of objects declared
    dynamic extent can now also be stack allocated
  * optimization: many standard CL functions which take functional arguments
    will automatically stack allocate any downward funarg closures.
  * optimization: better arithmetic between signed and unsigned words on arm64.
  * optimization: reduce consing when doing arithmetic resulting in small (3
    words or fewer) bignums.
  * bug fix: miscompilation of some additions of signed and unsigned words on
    x86-64.  (lp#2008673)
  * bug fix: loading the SB-SIMPLE-STREAMS contrib no longer incompatibly
    overwrites CL:OPEN's function type.  (lp#2008811)