@@ -1187,6 +1187,67 @@
       (inst sub r y)
       (inst jmp :o error)
       (inst add r tmp))))
+
+(define-vop (overflow+t)
+  (:translate overflow+)
+  (:args (x :scs (descriptor-reg))
+         (y :scs (any-reg)))
+  (:arg-types t tagged-num)
+  (:info type)
+  (:results (r :scs (any-reg) :from :load))
+  (:result-types tagged-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::add-overflow2-error x y)))
+      (generate-fixnum-test x)
+      (inst jmp :nz error)
+      (move r x)
+      (inst add r y)
+      (inst jmp :o error))))
+
+(define-vop (overflow-t)
+  (:translate overflow-)
+  (:args (x :scs (descriptor-reg))
+         (y :scs (any-reg)))
+  (:arg-types t tagged-num)
+  (:info type)
+  (:results (r :scs (any-reg) :from :load))
+  (:result-types tagged-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::sub-overflow2-error x y)))
+      (generate-fixnum-test x)
+      (inst jmp :nz error)
+      (move r x)
+      (inst sub r y)
+      (inst jmp :o error))))
+
+(define-vop (overflow*t)
+  (:translate overflow*)
+  (:args (x :scs (descriptor-reg))
+         (y :scs (signed-reg)))
+  (:arg-types t tagged-num)
+  (:info type)
+  (:results (r :scs (any-reg) :from :load))
+  (:result-types tagged-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::mul-overflow2-error x y)))
+      (generate-fixnum-test x)
+      (inst jmp :nz error)
+      (move r x)
+      (inst imul r y)
+      (inst jmp :o error))))
+
 
 (define-vop (fast-truncate/fixnum=>fixnum fast-safe-arith-op)
   (:translate truncate)
